# macroverse

./: .env.example  .firebaserc  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  firestore.rules  render.yaml  sonar-project.properties
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  cli.py  main.py  worker.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: admin.py  auth.py  charts.py  health.py  portfolio.py
backend/app/core/: config.py  firebase.py  market_database.py
backend/app/models/: auth.py  charts.py  common.py  portfolio.py
backend/app/repositories/: market.py  portfolio.py
backend/app/services/: admin_users.py  analytics.py  market_data.py  market_sync.py  recurring_transactions.py
backend/legacy_streamlit/: app.py
backend/legacy_streamlit/tracker/: __init__.py  auth.py  db.py  market_data.py  services.py
backend/legacy_streamlit/tracker/charts/: __init__.py  btc_cycles_roi.py  btc_cycles_roi_peak.py  btc_historical_returns.py  btc_qt_bear_markets.py  btc_terminal_price.py  btc_ytd_roi.py  data.py  registry.py  treasury_yield_curve.py  treasury_yield_spreads.py
backend/legacy_streamlit/tracker/ui/: __init__.py  auth.py  calendar_view.py  charts.py  dashboard.py  journal.py
backend/migrations/: 001_market_data.sql  002_replace_coingecko_series.sql  003_series_sync_cursor.sql  004_remove_columnstore_policy.sql
backend/scripts/: import_blofin_history.py  import_mexc_history.py  normalize_coverage.py  remove_non_trading_accounts.py
backend/tests/: test_admin.py  test_analytics.py  test_authentication.py  test_cli.py  test_config.py  test_health.py  test_infrastructure.py  test_market_charts.py  test_market_data.py  test_market_repository.py  test_market_services_extended.py  test_market_sync.py  test_portfolio_repository.py  test_portfolio_routes.py  test_recurring_transactions.py
docs/: README.md  api.md  architecture.md  deployment.md  development.md  operations.md  security.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  (+2 more)
(+54 files in other folders)
