[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "macroverse-api"
version = "1.0.0"
description = "Macroverse portfolio and market analytics API"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "firebase-admin>=6.6,<8",
  "pandas>=2.2,<3",
  "psycopg[binary]>=3.2,<4",
  "psycopg-pool>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["legacy_streamlit"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
